Add header and footer to index.html and styles to them

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body {
 	background-color: #081264;
 	color: #D4D9FF;
+	margin: 0;
 }
 
 .container {
@@ -24,9 +25,32 @@ body {
 	text-align: center;
 }
 
-p {
+/* Header */
+
+.header {
+	height: 150px;
+	background-color: #530808;
+	padding: 50px;
+}
+
+/* Content */
+
+.content p {
 	font-size: 15px;
 	text-align: center;
 	padding: 5px 0;
 	word-spacing: 2px;
+}
+
+/* Footer */
+
+.footer {
+	background-color: #530808;
+}
+
+.footer p {
+	font-size: 10px;
+	text-align: center;
+	padding: 5px;
+	word-spacing: 1px;
 }
